1011.	[func]		fdupont
	Added definitions and tests for the options from secure DHCPv6.
	This protocol is still experimental. The option and other protocol
	codes are for testing, they will be updated when IANA assigns
	official values.
	(Trac #4015, git 95f8c0d0af45807c1f303b9bbbb08f82b3bfc343)

1010.	[bug]		tmark
	Fixed test failures occuring for some tests after
	IfaceMgr::closeSockets was called.
	(Trac #4067, git 9161867dc6a354659ae8b5115ee437ec76c1771e)

1009.	[bug]		fdupont
	Now libutil blocks all signals when creating a new thread
	(so signals are delivered only to the main thread).
	(Trac #4065, git a4a8e422e613e4378f0a0641e4c480b73d67ebeb)

1008.	[build]		fdupont
	Removed the included header-only ASIO code.  Kea is now built
	against the installed copy of Boost.  The build by default
	attempts to use the header-only error code (ASIO dependency), but
	may also use the version in the boost system library.  The
	location of this library can be specified.
	(Trac #4009, git 8c293bc0d1804a512964621f114e64fcba0abcb9)

1007.	[func]		tomek
	DECLINE message in DHCPv6 is now supported. The server is able
	to receive it, check its correctness and move the lease to
	DECLINED state. Currently there is no way to recover the lease
	before 'decline-probation-period' time.
	(Trac #3982, git 11e2c4366d8624601172c01e95cff6a8b95833b3)

1006.	[bug]		marcin
	Fixed issues with threads concurrency in the TimerMgr.
	(Trac #4047, git 48297af6e0443808a482536b61436a42bc6a5b38)

1005.	[func]		tomek
	DHCPDECLINE message in DHCPv4 is now supported. The server is able
	to receive it, check its correctness and move the lease to
	DECLINED state. Currently there is no way to recover the lease
	before 'decline-probation-period' time.
	(Trac #3981, git c14a63c0d3a56ea3e880e874f854adc0077de75e)

1004.	[bug]		fdupont
	Incoming Confirm, Rebind and Information-Request messages are
	now more thoroughly checked against presence of client-id
	and server-id options.